Modify Date and finish 'addCar'

--- a/HW DB/HW DB.vcxproj.filters
+++ b/HW DB/HW DB.vcxproj.filters
@@ -29,5 +29,11 @@
     <ClInclude Include="Date.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Violation.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Lib.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
