--- a/HW DB/HW DB.vcxproj
+++ b/HW DB/HW DB.vcxproj
@@ -145,6 +145,8 @@
   <ItemGroup>
     <ClInclude Include="Date.h" />
     <ClInclude Include="DB.h" />
+    <ClInclude Include="Lib.h" />
+    <ClInclude Include="Violation.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
